# AADC2017___leTHIt_drive

./: CMakeLists.txt  README.md
AADC_ACC_withdepth/: CMakeLists.txt  cACC.cpp  cACC.h  stdafx.h
AADC_AEB/: CMakeLists.txt  cAEB.cpp  cAEB.h  stdafx.h
AADC_CrossLineOneSlot/: CMakeLists.txt  crossline_n.cpp  crossline_n.h
AADC_Crossing/: CMakeLists.txt  cCrossing.cpp  cCrossing.h  stdafx.h
AADC_DepthProcessing/: CMakeLists.txt  cDepthProcessing.cpp  cDepthProcessing.h
AADC_Globalthresh/: CMakeLists.txt  cthresh.cpp  cthresh.h
AADC_LaneChange/: CMakeLists.txt  cLaneChange.cpp  cLaneChange.h  stdafx.h
AADC_LaneFollower_with_globalthreshold/: CMakeLists.txt  lanefollower.cpp  lanefollower.h
AADC_Localization/: CMakeLists.txt  cLocalization.cpp  cLocalization.h
AADC_Open_Challenge_actuator/: CMakeLists.txt  cOactuators.cpp  cOactuators.h  stdafx.h
AADC_Parking/: CMakeLists.txt  cParking.cpp  cParking.cpp.autosave.MM8438  cParking.h  stdafx.h
AADC_Parkline/: CMakeLists.txt  cparkline.cpp  cparkline.h
AADC_Parkoutleft/: CMakeLists.txt  cParkoutleft.cpp  cParkoutleft.h
AADC_Parkoutright/: CMakeLists.txt  cParkoutright.cpp  cParkoutright.h  stdafx.h
AADC_PedestrianDetection/: CMakeLists.txt  cPedestrianDetection.cpp  cPedestrianDetection.h  template_data.h
AADC_RandomForest/: CMakeLists.txt  CMakeLists_old.txt  CMakeLists_test.txt  csvmultiarrayfilter.cpp  csvmultiarrayfilter.h  demo_csvmultiarrayfilter.plb.plugindescription  stdafx.h
AADC_RoadSignBackend/: CMakeLists.txt  cRoadSignBackend.cpp  cRoadSignBackend.h
AADC_Scanning/: CMakeLists.txt  cScanning.cpp  cScanning.h  stdafx.h
AADC_SituationDetection/: CMakeLists.txt  cSituationDetection.cpp  cSituationDetection.h  displaywidget.cpp  displaywidget.h  stdafx.h  stdafx2.h
AADC_StopLine2OneSlot/: CMakeLists.txt  stopline2.cpp  stopline2.h
AADC_Trafficdetection/: CMakeLists.txt  cTrafficsign.cpp  cTrafficsign.h
AADC_UDPConnect/: CMakeLists.txt  cUDPConnect.cpp  cUDPConnect.h  stdafx.h
AADC_UDPReceiving/: CMakeLists.txt  cUDPreceiving.cpp  cUDPreceiving.h
AADC_WheelSpeedController/: CMakeLists.txt  cWheelSpeedController.cpp  cWheelSpeedController.h
AADC_XMLWriter/: CMakeLists.txt  cXMLWriter.cpp  cXMLWriter.h  stdafx.h
